# advent-of-code-2025

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
benches/: aoc.rs
src/: days.rs  lib.rs  main.rs  runner.rs
src/day01/: mod.rs
src/day02/: mod.rs
src/day03/: mod.rs
src/day04/: mod.rs
src/day05/: mod.rs
src/day06/: mod.rs
src/day07/: mod.rs
