[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
test-log = {version = "0.2", default-features = false, features = ["trace"]}

# Improve perf on debug builds: https://docs.rs/color-eyre/latest/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3
