[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
itertools = "0.14"
rayon = "1.11"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.8.0"
test-log = { version = "0.2", default-features = false, features = ["trace"] }

# Improve perf on debug builds: https://docs.rs/color-eyre/latest/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3

# Gotta go fast
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "aoc_bin"
path = "src/main.rs"

[[bench]]
name = "aoc"
harness = false
